# connor-is-ai

./: .gitignore  .repopackignore  README.md  Tiltfile  repopack-instruction.md  repopack.config.json  tilt_config.json  update_prompts.sh
.github/workflows/: deploy.yml
backend/: .env  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  jwt_public.pem  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/sql/: messages.sql
backend/alembic/versions/: 448b3943f09d_create_chat_related_tables.py
backend/gen_ui_backend/: chain.py  server.py  stystem_prompt.example.md  system_prompt.example.md  types.py
backend/gen_ui_backend/models/: __init__.py  chat.py  chat_message.py  chat_session.py  user.py
backend/gen_ui_backend/routes/chat/: chain.py  router.py
backend/gen_ui_backend/routes/chat_session/: router.py  service.py
backend/gen_ui_backend/routes/deep_research/: chain.py  configuration.py  graph.py  prompts.py  router.py  state.py  utils.py
backend/gen_ui_backend/system_prompt/0_long_context_documents/: connor_is_ai_skeleton.txt  connor_is_ai_summary.txt
backend/gen_ui_backend/system_prompt_archive/: v1_instructions_overview.md  v3_instructions_overview.md  v4_instructions_overview.md
backend/gen_ui_backend/system_prompts/0_long_context_documents/: connor_is_ai_skeleton.txt  connor_is_ai_summary.txt
backend/gen_ui_backend/tools/: calendly.py  crypto.py  github.py  weather.py
backend/gen_ui_backend/utils/: auth.py  database.py  storage_service.py
backend/repopack/: repo_summary.py
backend/system_prompt_archive/: v2_instructions_overview.md  v5_instructions_overview.md
backend/system_prompts/: prompt_upload.py
backend/system_prompts/999_instructions/: instructions_overview.md
frontend/: .dockerignore  .env.example  .hope-not-needed-anymore-env  Dockerfile  Dockerfile.dev  next.config.mjs  package-lock.json  package.json
frontend/ai/: message.tsx
frontend/app/: agent.tsx  globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/deep-research/: page.tsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/components/chat/: base-chat.tsx  calendly.tsx  chat.tsx  crypto.tsx  github.tsx  greeting.tsx  message.css  message.tsx  mode-selector.tsx  research.tsx  weather.tsx
frontend/components/prebuilt/: chat.tsx
frontend/utils/: .gitignore  server-token.tsx  server.tsx
helm/: Chart.yaml  secrets-dev.example.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm/templates/: nginx-ingress-service.yaml
helm/templates/backend/: backend-config.yaml  configmap.yaml  deployment.yaml  ingress.yaml  secrets.yaml  service.yaml
helm/templates/configs/: alllow-ingress-policy.yaml  backend-config.yaml  default-deny-all-policy.yaml  managed-certificates.yaml  service-account.yaml
helm/templates/frontend/: configmap.yaml  deployment.yaml  ingres.yaml  ingress.yaml  secrets.yaml  service.yaml
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
